--- a/gb/17/4/24/n9071269.md
+++ b/gb/17/4/24/n9071269.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/twauiy338/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/twauiy338/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/twauiy338/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/twauiy338/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/twauiy338/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/twauiy338/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/twauiy338/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/twauiy338/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/twauiy338/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/twauiy338/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/twauiy338/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/twauiy338/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/twauiy338/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/twauiy338/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/twauiy338/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/twauiy338/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/twauiy338/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/twauiy338/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/twauiy338/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/twauiy338/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/twauiy338/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/twauiy338/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/twauiy338/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/twauiy338/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/twauiy338/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/twauiy338/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/twauiy338/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/twauiy338/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/twauiy338/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/twauiy338/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/twauiy338/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/twauiy338/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/twauiy338/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/twauiy338/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/twauiy338/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/twauiy338/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/twauiy338/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/twauiy338/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/twauiy338/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/twauiy338/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/twauiy338/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/twauiy338/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/twauiy338/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/twauiy338/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/twauiy338/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/twauiy338/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/twauiy338/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>谢天奇：习备战朝核危机 栗战书紧急访俄</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2020/12/f258f47b3d77ac2c3b447ced06a5eef5-320x200.jpg" />
+
 <h6></h6>
 <hr>
-	<p>【大纪元2017年04月25日讯】4月25日是朝鲜建军节，外界关注金正恩政权会否进行第6次核试或再试射导弹。近日，中、美、日、朝各方的动作显示，朝鲜半岛局势正在升级，战争风险再现。在此敏感时刻，<ahref="https://github.com/twauiy338/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>当局的外交与军事上的最新动作令人关注。</p>
-<p>（上接：<ahref="https://github.com/twauiy338/djy/blob/master/gb/17/4/21/n9062513.md#1">谢天奇：习近平有非常行动 5时间点攸关金正恩生死</a>）</p>
+	<p>【大纪元2017年04月25日讯】4月25日是朝鲜建军节，外界关注金正恩政权会否进行第6次核试或再试射导弹。近日，中、美、日、朝各方的动作显示，朝鲜半岛局势正在升级，战争风险再现。在此敏感时刻，<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>当局的外交与军事上的最新动作令人关注。</p>
+<p>（上接：<ahref="https://github.com/eizauy3553/djy/blob/master/gb/17/4/21/n9062513.md#1">谢天奇：习近平有非常行动 5时间点攸关金正恩生死</a>）</p>
 <h2>朝鲜建军节 半岛战争危机升级</h2>
-<p>4月24日，美国总统<ahref="https://github.com/twauiy338/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE.md#1">川普</a>（特朗普）在白宫与美国驻联合国大使海利以及安理会部分成员国大使会晤。海利警告平壤若进行核试与导弹试射，总统将介入作出决定，华府不排除动武。</p>
+<p>4月24日，美国总统<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE.md#1">川普</a>（特朗普）在白宫与美国驻联合国大使海利以及安理会部分成员国大使会晤。海利警告平壤若进行核试与导弹试射，总统将介入作出决定，华府不排除动武。</p>
 <p>当天，美国国会全体参议员（共100人）受邀周三（4月26日）到白宫，就朝鲜问题，听取国务卿、国防部长、国家安全顾问、参谋长联席会议主席的简报。</p>
 <p>日本海上自卫队说，两艘日本驱逐舰4月23日与正驶向朝鲜半岛水域的美国“卡尔文森号”航空母舰战斗群在西太平洋展开联合军事演习。另外，美日韩军方都加强警戒，两军增派侦察机及U2高空侦察机等加强监视朝鲜军方动向，日本自卫队亦提升应急准备。</p>
 <p>朝鲜当日扬言，平壤准备空袭在菲律宾附近与日本驱逐舰联合军演的美国航空母舰，并称平壤拥有“可以抵达美国和亚太地区”的武器和氢弹。美国五角大楼随后警告朝鲜，停止挑衅性行动和言辞，以避免进一步破坏局势稳定。</p>
@@ -21,18 +21,18 @@
 <p>美联社4月22日报导指，朝鲜首都平壤的多个油站，21日可能出现汽油短缺，汽车要排队等入油，而汽油价格亦大幅上涨。部分油站更限制供应，只容许外交官员及国际机构的车辆才可入油。朝鲜的原油供应一直高度倚赖中国；有报导指中国为逼使朝鲜停止发展核武和导弹，以及不再进行核试，以限制原油供应施压。</p>
 <p>4月24日，外媒又披露，朝鲜平壤国际机场的自动提款机（ATM）不能用，极可能是因为中国大陆上个月开始对朝鲜进行的制裁。</p>
 <p>朝中社4月23日报导，朝鲜最高领导人金正恩近日强调军队后勤保障方面自给自足的重要性，并表示朝鲜以自己的方式生产可保证丰衣足食。朝鲜官媒如此报导，或佐证北京对朝鲜的制裁升级，并影响到朝鲜军队的后勤保障。</p>
-<h2>习当局三大敏感动作备战<ahref="https://github.com/twauiy338/djy/blob/master/gb/tag/%E6%9C%9D%E6%A0%B8%E5%8D%B1%E6%9C%BA.md#1">朝核危机</a></h2>
-<p>在朝鲜半岛局势升级之际，<ahref="https://github.com/twauiy338/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>当局继前期加强军队部署之后，近期又有外交与军事上的敏感动作，备战<ahref="https://github.com/twauiy338/djy/blob/master/gb/tag/%E6%9C%9D%E6%A0%B8%E5%8D%B1%E6%9C%BA.md#1">朝核危机</a>升级及半岛战争风险的迹象明显。</p>
-<h3>一、<ahref="https://github.com/twauiy338/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE.md#1">川普</a>与习近平再次通电话</h3>
+<h2>习当局三大敏感动作备战<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%9C%9D%E6%A0%B8%E5%8D%B1%E6%9C%BA.md#1">朝核危机</a></h2>
+<p>在朝鲜半岛局势升级之际，<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>当局继前期加强军队部署之后，近期又有外交与军事上的敏感动作，备战<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%9C%9D%E6%A0%B8%E5%8D%B1%E6%9C%BA.md#1">朝核危机</a>升级及半岛战争风险的迹象明显。</p>
+<h3>一、<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE.md#1">川普</a>与习近平再次通电话</h3>
 <p>4月24日，习近平和美国总统川普再度通电话，就朝鲜半岛局势交换了意见。这是“川习会”后两人第二次通电话。4月12日上午，习近平同川普通了电话。中美元首互动之频密过去少见。</p>
 <p>根据大陆官方报导，习近平表示，中方会坚守联合国安理会的决议，同时希望有关各方保持克制，避免做加剧半岛局势紧张的事。习强调，只有有关各方都负起该负的责任、相向而行，才能尽快解决朝鲜半岛核问题，实现半岛无核化。</p>
 <p>美国白宫发声明，指川普在通话中批评朝鲜持续的挑衅行为，对半岛局势造成不稳定。双方又确认，朝鲜发展核武是迫在眉睫的威胁，同意加强合作，达致朝鲜半岛无核化。</p>
 <p>当天，日本首相安倍也与川普举行电话会谈，就继续抑制朝鲜的挑衅行为达成共识。安倍再度肯定川普包括考虑动武在内的“所有选项”，并呼吁中方发挥更大作用。</p>
 <p>川普同日分别与习近平、安倍通话，并与安理会成员国大使及美国国会密切互动；习近平强调有关各方都负起该负的责任，并与川普再次确认，朝鲜发展核武是迫在眉睫的威胁，同意加强合作；显示习与美日韩的合作行动正在展开。</p>
-<h3>二、<ahref="https://github.com/twauiy338/djy/blob/master/gb/tag/%E6%A0%97%E6%88%98%E4%B9%A6.md#1">栗战书</a>敏感时点访俄</h3>
-<p>4月18日，大陆官方通报，中共中央政治局委员、中办主任<ahref="https://github.com/twauiy338/djy/blob/master/gb/tag/%E6%A0%97%E6%88%98%E4%B9%A6.md#1">栗战书</a>将于4月25日至27日访问俄罗斯。栗战书此次访俄期间，将会见俄罗斯联邦领导人，增进两国政治互信，更好服务两国元首交往。</p>
-<p>俄罗斯总统<ahref="https://github.com/twauiy338/djy/blob/master/gb/tag/%E6%99%AE%E4%BA%AC.md#1">普京</a>将参加5月14日、15日在北京举行的“一带一路”峰会。据称，普京届时将邀请习近平6月访俄。</p>
-<p>栗战书是习近平的“大内总管”。在2015年3月，栗战书就曾以中办主任的名义，率队访问俄罗斯，受到<ahref="https://github.com/twauiy338/djy/blob/master/gb/tag/%E6%99%AE%E4%BA%AC.md#1">普京</a>接见，并与时任俄罗斯总统办公厅主任谢尔盖．伊万诺夫会谈。</p>
+<h3>二、<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%A0%97%E6%88%98%E4%B9%A6.md#1">栗战书</a>敏感时点访俄</h3>
+<p>4月18日，大陆官方通报，中共中央政治局委员、中办主任<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%A0%97%E6%88%98%E4%B9%A6.md#1">栗战书</a>将于4月25日至27日访问俄罗斯。栗战书此次访俄期间，将会见俄罗斯联邦领导人，增进两国政治互信，更好服务两国元首交往。</p>
+<p>俄罗斯总统<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%99%AE%E4%BA%AC.md#1">普京</a>将参加5月14日、15日在北京举行的“一带一路”峰会。据称，普京届时将邀请习近平6月访俄。</p>
+<p>栗战书是习近平的“大内总管”。在2015年3月，栗战书就曾以中办主任的名义，率队访问俄罗斯，受到<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%99%AE%E4%BA%AC.md#1">普京</a>接见，并与时任俄罗斯总统办公厅主任谢尔盖．伊万诺夫会谈。</p>
 <p>当时有分析指，栗战书罕见由幕后走向前台，以中办主任身份独自外访，打破过往中共外交惯例；显示其受习信任、重用，并在中俄外交中担任重要角色。</p>
 <p>栗战书两周前刚陪同习近平参加川习会；近期4月19日至21日，随习近平视察广西；此次4月25日至27日出访俄罗斯，适逢朝鲜建军节、朝鲜半岛局势升级之际。</p>
 <p>另外，中共江派常委、人大委员长张德江4月18日至20日赴俄出席中俄议会合作委员会第三次会议，期间，会见俄罗斯总统普京，并与马特维延科和沃洛金分别举行会谈。栗战书紧随张德江之后访俄，时间点也耐人寻味。</p>
@@ -56,7 +56,7 @@
 <p>朝鲜半岛局势紧张，尤其美日韩三国航母、舰艇将集聚在朝鲜半岛海域并进行演习之际，习近平军队部署方面也有连番动作。朝鲜建军节敏感期，习近平带军委高层抵达中朝边境的辽宁与海军基地大连，很可能与第一线的军事部署与决策有关。习近平在大连到底待了多长时间，相关内幕究竟如何，可能在朝鲜建军节敏感期过后被逐步披露。</p>
 <p>朝鲜建军节敏感期，朝鲜第六次核试危机前夕，美国、日本、韩国加强军事联合行动，对朝鲜释放震慑信号。习当局则加强制裁朝鲜，并在外交上、文宣上与金正恩政权出现分裂迹象。与此同时，习当局外交上与美国川普政府及俄罗斯普京政府保持最紧密的联系，军事上加强部署、紧急备战意味明显。</p>
 <p>中、美、日、韩联手解决朝核危机的态势已是箭在弦上，悬念只在于解决的时间点与方式。一旦朝鲜在4月25日海军节有核试及试射导弹等孤注一掷举动，朝鲜半岛局势料将即时升级。#</p>
-<p>（未完待续；下接：<ahref="https://github.com/twauiy338/djy/blob/master/gb/17/4/25/n9074859.md#1">谢天奇：习李同步离京 朝核危机外围战先开打</a>）</p>
+<p>（未完待续；下接：<ahref="https://github.com/eizauy3553/djy/blob/master/gb/17/4/25/n9074859.md#1">谢天奇：习李同步离京 朝核危机外围战先开打</a>）</p>
 <p>（大纪元2017年4月24日首发，转载请注明出处。）</p>
 <p>责任编辑：朱颖</p>
 	
@@ -64,42 +64,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/twauiy338/djy/blob/master/gb/17/4/14/n9039012.md#1">谢天奇：川习私谈5小时 内幕不一般(完整版)</a></li>
-<li><a href="https://github.com/twauiy338/djy/blob/master/gb/17/4/17/n9048019.md#1">谢天奇：川普放硬话势在必得 金正恩岌岌可危</a></li>
-<li><a href="https://github.com/twauiy338/djy/blob/master/gb/17/4/18/n9051459.md#1">谢天奇：北京外交军事异动 川习通话藏玄机？</a></li>
-<li><a href="https://github.com/twauiy338/djy/blob/master/gb/17/4/19/n9055353.md#1">谢天奇：朝核内幕惊人 金正恩是习心头之患？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/4/14/n9039012.md#1">谢天奇：川习私谈5小时 内幕不一般(完整版)</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/4/17/n9048019.md#1">谢天奇：川普放硬话势在必得 金正恩岌岌可危</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/4/18/n9051459.md#1">谢天奇：北京外交军事异动 川习通话藏玄机？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/4/19/n9055353.md#1">谢天奇：朝核内幕惊人 金正恩是习心头之患？</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/8/n11242732.md#1" target="_blank">【征文】张东园：孔子为什么不是无神论？</a></li><li><a href="https://github.com/twauiy338/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/1/n10946163.md#1" target="_blank">新加坡法轮功学员修炼故事 真善忍改变人心</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/30/n10262441.md#1" target="_blank">张敏：王同竹之死——“文革”焚书坑儒一例</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/6/16/n8005208.md#1" target="_blank">美肿瘤学会收录法轮功延长癌患生命论文</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/twauiy338/djy/blob/master/gb/20/10/3/n12449891.md#1">《圣经》与《推背图》预言的应验与变换11</a></li>
-<li><a href="https://github.com/twauiy338/djy/blob/master/gb/20/12/27/n12647393.md#1">中共培育基因改造士兵 或引圣经中末世战争</a></li>
-<li><a href="https://github.com/twauiy338/djy/blob/master/gb/20/12/30/n12654008.md#1">2021年的六大预言：灾难与救赎</a></li>
-<li><a href="https://github.com/twauiy338/djy/blob/master/gb/20/12/21/n12634571.md#1">《诸世纪》预言共产恶魔的产生与覆灭</a></li>
-<li><a href="https://github.com/twauiy338/djy/blob/master/gb/20/12/30/n12655241.md#1">你今世的亲人必与你结过前缘</a></li>
-<li><a href="https://github.com/twauiy338/djy/blob/master/gb/20/12/30/n12655646.md#1">【有冇搞错】乔州参院选举 堵共产渗透最后防线</a></li>
-<li><a href="https://github.com/twauiy338/djy/blob/master/gb/20/12/31/n12657349.md#1">【微视频】2020中国脱口秀火爆 有一类不敢说</a></li>
-<li><a href="https://github.com/twauiy338/djy/blob/master/gb/20/12/31/n12657637.md#1">【财商天下】华尔街“养肥”中共 背后交易内幕</a></li>
-<li><a href="https://github.com/twauiy338/djy/blob/master/gb/20/12/30/n12653452.md#1">【秦鹏直播】川普迎来两个喜讯</a></li>
-<li><a href="https://github.com/twauiy338/djy/blob/master/gb/20/12/30/n12654915.md#1">【新闻大家谈】默克尔抢跑 拜登第一枪卡壳</a></li>
-<li><a href="https://github.com/twauiy338/djy/blob/master/gb/20/12/30/n12653390.md#1">【时事纵横】中国大半冰冻 彭斯被告原因解析</a></li>
-<li><a href="https://github.com/twauiy338/djy/blob/master/gb/20/12/30/n12655381.md#1">郑欣宜体重破90公斤 继承肥姐遗产进入倒计时</a></li>
-<li><a href="https://github.com/twauiy338/djy/blob/master/gb/20/12/30/n12653155.md#1">明星健康码照外泄 李冰冰等千人个资仅卖1元</a></li>
-<li><a href="https://github.com/twauiy338/djy/blob/master/gb/20/12/30/n12655856.md#1">冯小刚降低身段拍网剧 上部电影票房惨淡</a></li>
-<li><a href="https://github.com/twauiy338/djy/blob/master/gb/21/1/1/n12658383.md#1">2020年香港演艺圈 十位资深艺人离世</a></li>
-<li><a href="https://github.com/twauiy338/djy/blob/master/gb/20/12/29/n12652757.md#1">身体没病却被针灸14针 邓超自嘲为儿女当针模</a></li>
-<li><a href="https://github.com/twauiy338/djy/blob/master/gb/20/12/30/n12653802.md#1">2020年地球自转速度异常快 一天时间变短</a></li>
-<li><a href="https://github.com/twauiy338/djy/blob/master/gb/20/12/30/n12654160.md#1">木星土星相合 澳男拍到国际太空站从中穿越</a></li>
-<li><a href="https://github.com/twauiy338/djy/blob/master/gb/20/12/30/n12653476.md#1">为了保护孩子 澳洲男子被巨大袋鼠击倒在地</a></li>
-<li><a href="https://github.com/twauiy338/djy/blob/master/gb/21/1/1/n12659278.md#1">川普签法案 国防部180天内须揭露UFO讯息</a></li>
-<li><a href="https://github.com/twauiy338/djy/blob/master/gb/20/12/31/n12656207.md#1">辉瑞等国际4种疫苗比一比 一表看懂差别</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13634492.md#1">【思想领袖】如何对抗大科企极权主义</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676864.md#1">【神韵原创音乐】2019 神韵交响乐《情系道缘》</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676901.md#1">林心如晒自拍秀恩爱 霍建华私下小动作引围观</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/twauiy338/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/twauiy338/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/4/24/n9071269.htm">谢天奇：习备战朝核危机 栗战书紧急访俄</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/4/24/n9071269.htm">谢天奇：习备战朝核危机 栗战书紧急访俄</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/twauiy338/djy/blob/master/gb/17/4/24/n9071269.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/twauiy338/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twauiy338/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/twauiy338/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/twauiy338/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/twauiy338/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twauiy338/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/twauiy338/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twauiy338/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/twauiy338/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twauiy338/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/twauiy338/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twauiy338/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/twauiy338/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twauiy338/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/twauiy338/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twauiy338/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/twauiy338/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twauiy338/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/twauiy338/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twauiy338/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/twauiy338/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twauiy338/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/twauiy338/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twauiy338/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/twauiy338/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twauiy338/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/twauiy338/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twauiy338/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/twauiy338/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twauiy338/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/twauiy338/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twauiy338/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/twauiy338/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twauiy338/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/twauiy338/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twauiy338/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/twauiy338/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twauiy338/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/twauiy338/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twauiy338/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/twauiy338/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twauiy338/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/twauiy338/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twauiy338/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/twauiy338/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twauiy338/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/twauiy338/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/twauiy338/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/17/4/24/n9071269.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
